# QtTimer

./: CMakeLists.txt  README  README.org
src/: CMakeLists.txt  main.cc  qt-timer.cc  qt-timer.h
